apps/main-app/src/containers/modLanding/style.scss
@import "../../theme";
@import '~bootstrap/scss/functions';
@import '~bootstrap/scss/variables';
@import '~bootstrap/scss/mixins';



.titleBar {
  color: white;
  bottom: 0px;
  padding-top: 10px;
  padding-bottom: 5px;
}

.titleBar__DEFAULT {
  background-color: #2598c5;
}

.titleBar__WB {
  background-color: #85A6BA;
}

.titleBar__SGD {
  background-color: #696599;
}

.titleBar__ZFIN {
  background-color: #018080;
}

.titleBar__FB {
  background-color: #003568;
}

.titleBar__GO {
  background-color: #264370;
}

.titleBar__RGD {
  background-color: #699fc8;
}

.titleBar__MGI {
  background-color: #dfeffe;
  color: #143055;
}

.titleBarText {
  vertical-align: middle;
}

.titleBarEmptyRow {
  padding: 0;
  margin: 0;
  width: 100%;
  height: 160px;
}

.sectionTitle {
  color: #2598c5;
}

.section {
  padding: 1rem 1rem 1rem 1rem;
  border: 4px solid;
  border-radius: 24px;
}

.section__WB {
  border-color: #85A6BA;
}

.section__SGD {
  border-color: #696599;
}

.section__ZFIN {
  border-color: #018080;
}

.section__FB {
  border-color: #003568;
}

.section__GO {
  border-color: #264370;
}

.section__RGD {
  border-color: #699fc8;
}

.section__MGI {
  border-color: #dfeffe;
}

.containerExtra {
  max-width: 100%;
  margin: 1rem .25rem 1rem .25rem;
}

.banner {
  background-size: cover;
  background-position: center center;
}

.banner__DEFAULT {
  background-image: url('https://alliancegenome.files.wordpress.com/2018/06/allbanners-45621.jpg');
}

.banner__WB {
  background-image: url('assets/topBannerWB.jpg');
}

.banner__SGD {
  background-image: url('assets/topBannerSGD.png');
}

.banner__ZFIN {
  background-image: url('assets/topBannerZFIN.png');
}

.banner__MGI{
  background-image: url('assets/topBannerMGI.png');
}

.banner__RGD{
  background-image: url('assets/topBAnnerRGD.png');
}

.banner__FB{
  background-image: url('assets/topBannerFB.png');
}

.banner__GO{
  background-image: url('assets/topBannerGOC.png');
}

:global(.sharedaddy) {
  display: none;
}

