SCRUM-957 responsive design and layout matching https://docs.google.com/document/d/1AvZWuGu81VibDUd2s2FaCVvvQIh2dZP4mF8UTR3J9vM/edit# with resources on the right and everything else on the left, in an 8 to 4 ratio and breakpoint between bootstrap small and medium.  Force no padding to those col divs to avoid too much whitespace

--- a/apps/main-app/src/containers/modLanding/style.scss
+++ b/apps/main-app/src/containers/modLanding/style.scss
@@ -56,6 +56,10 @@
   height: 160px;
 }
 
+.noPadding {
+  padding: 0;
+}
+
 .sectionTitle {
   color: #2598c5;
 }
